<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes Kotlin</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_setting">Settings</string>
    <string name="enter_description_error">Please enter a description</string>
    <string name="enter_title_error">Please enter a title</string>
    <string name="title">Title</string>

    <string name="title_please_wait">Please wait</string>
    <string name="title_processing">Processing...</string>
    <string name="title_alert">Alert</string>
    <string name="title_internet_problem">There is no or poor internet connection. Please connect to stable internet connection and try again.</string>
    <string name="exception_invalid_response">We are unable to process your request at the moment. Please try again later.</string>
    <string name="exception_time_out">This seems to be taking longer than usual. Please try again later.</string>
    <string name="FETCHING_DETAILS_PROBLEM">Unable to fetch required details</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="use_light_theme">Use Light Theme</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="change_to_czech">Change to Czech Republic Language</string>
    <string name="visual">Visual</string>
    <string name="btn_ok">Ok</string>

</resources>