<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Phil Shadlyn
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/visual">

        <CheckBoxPreference
            android:key="light_theme"
            android:title="@string/use_light_theme"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="language"
        android:title="@string/language">

        <CheckBoxPreference
            android:key="language"
            android:title="@string/change_language"
            android:summary="@string/change_to_czech"/>

    </PreferenceCategory>

</PreferenceScreen>